docs/requirements/v1.3.0-dev/REQUIREMENTS.md

Requirements Summary
====================

# default

## As a registry user, I want to ingest supplemental metadata from Product_Metadata_Supplemental. ([#121](https://github.com/NASA-PDS/registry/issues/121))


This requirement is not impacted by the current version
## The service shall provide a means identifying relationships between artifact registrations ([#104](https://github.com/NASA-PDS/registry/issues/104))


This requirement is not impacted by the current version
## The service shall allow deletion of registered artifacts ([#103](https://github.com/NASA-PDS/registry/issues/103))


This requirement is not impacted by the current version
## As a node operator, I want the ability to rollback to a previous version of the registry ([#111](https://github.com/NASA-PDS/registry/issues/111))


This requirement is not impacted by the current version
## As a node operator, I want actionable, user-friendly error messages for registry schema failures ([#110](https://github.com/NASA-PDS/registry/issues/110))


This requirement is not impacted by the current version
## As a node operator, I want to ingest metadata regarding secondary products that belong to a collection. ([#108](https://github.com/NASA-PDS/registry/issues/108))


This requirement is not impacted by the current version
## As a node operator, I want to ingest metadata regarding secondary collections that belong to a bundle. ([#109](https://github.com/NASA-PDS/registry/issues/109))


This requirement is not impacted by the current version
## As a developer, I want to include supplemental file data sizes in the registry ([#112](https://github.com/NASA-PDS/registry/issues/112))


This requirement is not impacted by the current version
## As a node operator, I want the the registry schema to update autonomously when new data is ingested. ([#113](https://github.com/NASA-PDS/registry/issues/113))


This requirement is not impacted by the current version
## As a user, I want to uninstall the Registry and all its components ([#114](https://github.com/NASA-PDS/registry/issues/114))


This requirement is not impacted by the current version
## As a registry user, I want to ingest supplemental metadata from a MySQL database ([#50](https://github.com/NASA-PDS/registry/issues/50))


This requirement is not impacted by the current version
## As a registry user, I want to ingest supplemental metadata from a CSV that is not archive data ([#51](https://github.com/NASA-PDS/registry/issues/51))


This requirement is not impacted by the current version
## As a registry user, I want to ingest supplemental metadata from external data sources ([#49](https://github.com/NASA-PDS/registry/issues/49))


This requirement is not impacted by the current version
## As a user, I want to ingest legacy PDS3 data sets from EN legacy registry ([#62](https://github.com/NASA-PDS/registry/issues/62))


This requirement is not impacted by the current version
## As a user I want to specify a directory to load LDD jsons which are not available online ([#107](https://github.com/NASA-PDS/registry/issues/107))


This requirement is not impacted by the current version
## As a user, I want to change the archive status for a collection and it's associated products ([#115](https://github.com/NASA-PDS/registry/issues/115))


This requirement is not impacted by the current version
## As a user, I want to switch a bundle and it's associated collections and products from a protected status to operational. ([#105](https://github.com/NASA-PDS/registry/issues/105))


This requirement is not impacted by the current version
## As a user, I want to ingest data products even when errors are thrown ([#106](https://github.com/NASA-PDS/registry/issues/106))


This requirement is not impacted by the current version
## As a user, I want to be able to ingest PDS4 labels with LBLX file extension (CCB-260) ([#27](https://github.com/NASA-PDS/registry/issues/27))


This requirement is not impacted by the current version
## Upgrade the initialization of the ES/OS database following latest upgrade of components ([#31](https://github.com/NASA-PDS/registry/issues/31))


This requirement is not impacted by the current version
## As a registry operator, I want to be able to sync one registry with another ([#44](https://github.com/NASA-PDS/registry/issues/44))


This requirement is not impacted by the current version
## As a user, I want to indicate a product has been superseded ([#52](https://github.com/NASA-PDS/registry/issues/52))


This requirement is not impacted by the current version
## As a PDS EN administrator, I want to a central managed directory to used for the opensearch authentication ([#66](https://github.com/NASA-PDS/registry/issues/66))


This requirement is not impacted by the current version
## As a registry node user from JPL, I want to use my JPL login to access the Registry's OpenSearch ([#67](https://github.com/NASA-PDS/registry/issues/67))


This requirement is not impacted by the current version
## As a user, I want to view more detailed documentation on the Registry schema ([#75](https://github.com/NASA-PDS/registry/issues/75))


This requirement is not impacted by the current version
## As a tester, when the registry starts in test/integration mode, I want the database be reinitialized ([#83](https://github.com/NASA-PDS/registry/issues/83))


This requirement is not impacted by the current version
## As a user, I want to harvest and register alternate data file paths ([#86](https://github.com/NASA-PDS/registry/issues/86))


This requirement is not impacted by the current version
## As a user, I want to be able to ingest mirrored archive data ([#93](https://github.com/NASA-PDS/registry/issues/93))


This requirement is not impacted by the current version
## As a user I want to change the file paths of products in the registry ([#96](https://github.com/NASA-PDS/registry/issues/96))


This requirement is not impacted by the current version
## Update documentation to include explicit example of how to query staged data ([#100](https://github.com/NASA-PDS/registry/issues/100))


This requirement is not impacted by the current version
## As a user, I want to know the harvest status for a specific product ([#101](https://github.com/NASA-PDS/registry/issues/101))


This requirement is not impacted by the current version
## As a user, I want to load invalid PDS4 labels ([#123](https://github.com/NASA-PDS/registry/issues/123))


This requirement is not impacted by the current version
## As a user, I want to track product validation status in the registry ([#124](https://github.com/NASA-PDS/registry/issues/124))


This requirement is not impacted by the current version
## As a user, I want to track overall product status in the registry ([#125](https://github.com/NASA-PDS/registry/issues/125))


This requirement is not impacted by the current version
## As a user, I want to track a product's harvest status in the registry ([#126](https://github.com/NASA-PDS/registry/issues/126))


This requirement is not impacted by the current version
## As a user, I want to search for data that is no longer accessible online ([#127](https://github.com/NASA-PDS/registry/issues/127))


This requirement is not impacted by the current version
## As a user, I want to view dashboard report of bundles with archive status and other tracking information ([#130](https://github.com/NASA-PDS/registry/issues/130))


This requirement is not impacted by the current version
## As a user, I want to be able to update bundle archive status by package id ([#131](https://github.com/NASA-PDS/registry/issues/131))


This requirement is not impacted by the current version
## As a developer, I want a minimally-populated deployment profile  ([#145](https://github.com/NASA-PDS/registry/issues/145))


This requirement is not impacted by the current version
## As a user, I want to all metadata attributes to be searchable ([#153](https://github.com/NASA-PDS/registry/issues/153))


This requirement is not impacted by the current version
## As a user, I want to track the deep archive status for a product ([#158](https://github.com/NASA-PDS/registry/issues/158))


This requirement is not impacted by the current version
## As a developer, I want to know when the CI pipeline fails ([#165](https://github.com/NASA-PDS/registry/issues/165))


This requirement is not impacted by the current version
## As a manager, I want to see the progress of data sets ingested into registry vs. legacy registry ([#168](https://github.com/NASA-PDS/registry/issues/168))


This requirement is not impacted by the current version
## As a user, I want the registry to have 99.9999999% uptime ([#176](https://github.com/NASA-PDS/registry/issues/176))


This requirement is not impacted by the current version
## As a user, I want to manually update a product's file location (file_ref) ([#209](https://github.com/NASA-PDS/registry/issues/209))


This requirement is not impacted by the current version
## As an operator, I want to be notified of when Registry storage capacity exceeds 75% capacity. ([#211](https://github.com/NASA-PDS/registry/issues/211))


This requirement is not impacted by the current version
## As a system, I can support up to 25 simultaneous writes from Harvest ([#226](https://github.com/NASA-PDS/registry/issues/226))


This requirement is not impacted by the current version
## As a Archivist, I want to manually add licensing information to data sets ([#232](https://github.com/NASA-PDS/registry/issues/232))


This requirement is not impacted by the current version
